lib_LTLIBRARIES = libStkLib.la

library_includedir=$(includedir)

#library_include_HEADERS = QianLong.h  Resource.h  SelfDB.h  ShengLong.h  SpDebug.h  SpLock.h  SpMemory.h  StdAfx.h  Strings.h


INCLUDES=-I../Include

#libStkLib_la_SOURCES = AfxCore.cpp   Container.cpp  IMCode.cpp      Packets.cpp   \
#ShengLong.cpp  SpFile.cpp    SpValid.cpp   Strings.cpp     Technique.cpp \
#Alarm.cpp     Database.cpp   KData.cpp       Profile.cpp   SpArchive.cpp  SpMemory.cpp  StdAfx.cpp    StStore.cpp     TechOther.cpp \
#BaseData.cpp  DayTrader.cpp  MathParser.cpp  QianLong.cpp  SpAssert.cpp   SpObject.cpp  StkLib.cpp    TechCLK.cpp     TechSwing.cpp \
#Boyermor.cpp  DRData.cpp     Minute.cpp      Report.cpp    SpColl.cpp     SpString.cpp  Stock.cpp     TechEnergy.cpp  TechTrend.cpp \
#CommFuns.cpp  Express.cpp    Outline.cpp     SelfDB.cpp    SpDebug.cpp    SpTime.cpp    Strategy.cpp  TechKLine.cpp   TechUser.cpp

libStkLib_la_SOURCES = KData.cpp
